syntax = "proto3";

option java_package = "com.onlineshop.grpc";
option java_multiple_files = true;
option java_generic_services = false;

service WarehouseService {
    rpc getAllItems(GetItemsRequest) returns (GetItemsResponse);
    rpc addItem(AddItemRequest) returns (AddItemResponse);
    rpc removeItem(DeleteItemRequest) returns (DeleteItemResponse);

    rpc updateItemQuantity(UpdateItemQuantityRequest) returns (UpdateItemQuantityResponse);
}

message GetItemsRequest {}

message GetItemsResponse {
    string responseMessage = 1;
    int32  responseCode  = 2;
}

message ItemData {
    string name = 1;
    string category = 2;
    string country = 3;
    string city = 4;
    int32 quantity = 5;
}

message AddItemRequest {
    string id = 1;
    ItemData data = 2;
}

message AddItemResponse {
    string responseMessage = 1;
    int32  responseCode  = 2;
}

message DeleteItemRequest {
    string id = 1;
}

message DeleteItemResponse {
    string responseMessage = 1;
    int32  responseCode  = 2;
}

message UpdateItemQuantityRequest {
        string id = 1;
        int32 quantity =2;
}

message UpdateItemQuantityResponse {
    string responseMessage = 1;
    int32  responseCode  = 2;
}